# mit_6172_performance_engineering

./: .gitignore  Cargo.toml  Dockerfile  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
.run/: matrix_mul_1.run.xml
classes/assembly_lang_and_comp_arch_4/: Cargo.toml
classes/assembly_lang_and_comp_arch_4/c/: Makefile  fib.c
classes/assembly_lang_and_comp_arch_4/src/: main.rs
classes/bentley_rules_2/: Cargo.toml
classes/bentley_rules_2/c/: Makefile  algebraic.c  hoisting.c
classes/bentley_rules_2/src/: compressed_sparse_row.rs  main.rs
classes/bit_hacks_3/: Cargo.toml
classes/bit_hacks_3/c/: Makefile  branching.c  mod_add.c
classes/intro_0/: Cargo.toml
classes/intro_0/c/: main.c  run.sh
classes/intro_0/src/: main.rs
classes/matrix_mul_1/: Cargo.toml
classes/matrix_mul_1/c/: Makefile  main.c  run.sh
classes/matrix_mul_1/go/: Makefile  go.mod  main.go
classes/matrix_mul_1/src/: main.rs
classes/nondeterministic_parallel_programming_16/: Cargo.toml  Dockerfile
classes/nondeterministic_parallel_programming_16/go/: go.mod  main.go
classes/nondeterministic_parallel_programming_16/src/: atomic_usize.rs  main.rs  mutex.rs  not_optimized_spinlock.rs  optimized_spinlock.rs
classes/sync_without_locks_17/: Cargo.toml
classes/sync_without_locks_17/go/: go.mod  stack_test.go
classes/sync_without_locks_17/src/: atomic.rs  peterson.rs
classes/utils/src/: lib.rs
classes/what_compilers_can_and_cannot_do_9/: Cargo.toml  Makefile
homework/2_profiling/recitation/: Makefile  (+1 more)
homework/6_mem_allocator/: Makefile  malloc.c  malloc.h
(+11 files in other folders)
