[package]
name = "matrix_mul_1"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.0-beta.1"
rayon.workspace = true

# Improve runtime performance and reduce binary size at the expense of longer compile times
# This optimization is achieved by treating the compilation as a single unit instead of splitting it into multiple parts
[profile.release]
codegen-units = 1
lto = "fat"
